force-app/main/default/objects/QuoteStructureDetail__c/QuoteStructureDetail__c.object-meta.xml
<CustomObject>
    <label>Quote Structure Detail</label>
    <nameField>
        <label>Route Family</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Structure Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>