force-app/main/default/objects/QuoteStructureDetail__c/fields/AddQty_t__c.field-meta.xml
<CustomField>
    <fullName>AddQty_t__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AddQty (t)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>