force-app/main/default/objects/QuoteStructureDetail__c/fields/DateBegin__c.field-meta.xml
<CustomField>
    <fullName>DateBegin__c</fullName>
    <label>Date Begin</label>
    <type>Date</type>
</CustomField>