force-app/main/default/objects/QuoteStructureDetail__c/fields/DateEnd__c.field-meta.xml
<CustomField>
    <fullName>DateEnd__c</fullName>
    <label>Date End</label>
    <type>Date</type>
</CustomField>