force-app/main/default/objects/QuoteStructureDetail__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>