force-app/main/default/objects/QuoteStructureDetail__c/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Type</label>
    <referenceTo>FamiliesTypes__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>