force-app/main/default/objects/QuoteStructureDetail__c/fields/Group3__c.field-meta.xml
<CustomField>
    <fullName>Group3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group3</label>
    <referenceTo>Group3__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>