force-app/main/default/objects/QuoteStructureDetail__c/fields/QuoteStruct__c.field-meta.xml
<CustomField>
    <fullName>QuoteStruct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotes Structure</label>
    <referenceTo>QuotesStructure__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>