force-app/main/default/objects/QuoteStructureDetail__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>