force-app/main/default/objects/QuoteStructureDetail__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>