force-app/main/default/objects/QuoteStructureDetail__c/fields/RouteQuote__c.field-meta.xml
<CustomField>
    <fullName>RouteQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotes Budget All</label>
    <referenceTo>Route_Quota__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>