force-app/main/default/objects/QuoteStructureDetail__c/fields/RouteQuoteRelated__c.field-meta.xml
<CustomField>
    <fullName>RouteQuoteRelated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Quotes Related</label>
    <referenceTo>RouteQuotesRelated__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quote_Structure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>