force-app/main/default/objects/QuoteStructureDetail__c/fields/RoutesQuotesH__c.field-meta.xml
<CustomField>
    <fullName>RoutesQuotesH__c</fullName>
    <label>Route Quotes Hierarchy</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipLabel>Quote Structure Detail</relationshipLabel>
    <relationshipName>Quota_Structure_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>